axios的导入和首页的导航栏编写

--- a/src/main/webapp/log.html
+++ b/src/main/webapp/log.html
@@ -79,13 +79,14 @@
                 <p>
                     <input type="checkbox" name="rememberPassword">
                     <label for="rememberPassword">记住账号密码</label>
-                    <button class="login">登录</button>
+                    <button class="login" @click="login">登录</button>
                 </p>
             </div>
         </div>
 
     </div>
     <script src="js/vue.js"></script>
+    <script src="js/axios.min.js"></script>
     <script src="js/log.js"></script>
 </body>
 
