图片上传和首首页导航栏下块提交

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,7 +24,26 @@
                 <li>登录</li>
             </ul>
         </div>
+        <div class="topHandle">
+
+            <div class="topLogo">
+                <img src="img/antsLogo.png" alt="蚂蚁置物">
+                <span>{{projectName}}</span>
+            </div>
+
+            <div class="mainHandle">
+                <button>发布寻求</button>
+                <button>正在寻求</button>
+            </div>
+
+            <div class="searchGoods">
+                <input type="text">
+                <span>sou</span>
+            </div>
+
+        </div>
     </div>
+    <script src="js/vue.js"></script>
     <script src="js/index.js"></script>
 </body>
 
