首页部分样式修改

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,15 +16,14 @@
             <nav class="nav">
                 <div class="navContainer">
                     <ul class="leftNav">
-                        <li>首页</li>
+                        <li class="localIn">首页</li>
                         <li>租赁</li>
                         <li>赠送</li>
                     </ul>
                     <ul class="rightNav">
                         <li class="schoolChoose">广东金融学院</li>
-                        <li>学校</li>
+                        <li class="localIn">买家</li>
                         <li>卖家</li>
-                        <li>买家</li>
                         <li>登录</li>
                     </ul>
             </nav>
@@ -87,8 +86,8 @@
                     <img src="img/index/tongzhi.png">
                     <p>
                         <strong>公告</strong>
-                        <a href="#" class="announceContent">通知</a>
-                        <span class="announceTime">时间</span>
+                        <a href="#" class="announceContent">{{announceContent}}</a>
+                        <span class="announceTime">{{announceTime}}</span>
                     </p>
                     <a href="#" class="moreAnnounce">更多</a>
                 </div>
