登录部分请求和首页样式修改

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,9 +16,9 @@
             <nav class="nav">
                 <div class="navContainer">
                     <ul class="leftNav">
-                        <li class="localIn">首页</li>
-                        <li>租赁</li>
-                        <li>赠送</li>
+                        <li class="localIn"><a href="index.html">首页</a></li>
+                        <li><a href="#">租赁</a></li>
+                        <li><a href="#">赠送</a></li>
                     </ul>
                     <ul class="rightNav">
                         <li class="schoolChoose">广东金融学院</li>
