--- a/src/main/webapp/log.html
+++ b/src/main/webapp/log.html
@@ -82,9 +82,18 @@
                 <p>
                     <input type="checkbox" name="rememberPassword">
                     <label for="rememberPassword">记住账号密码</label>
-                    <button class="login" @click="login">登录</button>
+                    <button class="login" @click="picCodeRequest">登录</button>
                 </p>
             </div>
+
+            <div class="picCode">
+                <div class="picContainer">
+                    <img v-if="!dragStart" :src="[imgSource+''+sourceImgName]">
+                    <img v-if="dragStart" :src="[imgSource+''+bigImgName]">
+                    <img :src="[imgSource+''+smallImgName]">
+                </div>
+            </div>
+
         </div>
 
     </div>
