--- a/src/main/webapp/log.html
+++ b/src/main/webapp/log.html
@@ -50,7 +50,7 @@
 
         <!-- 登录框 -->
         <div class="inputBg">
-            <div :class="['infoInput']">
+            <div v-if="!showCode" :class="['infoInput']">
                 <p>{{productName}} LOGIN</p>
 
                 <info-input>
@@ -86,15 +86,21 @@
                 </p>
             </div>
 
-            <div class="picCode" wx:if="showCode">
-                <div class="picContainer">
-                    <img v-if="!dragStart" :src="[imgSource+''+sourceImgName]">
-                    <img v-if="dragStart" :src="[imgSource+''+bigImgName]">
-                    <img :src="[imgSource+''+smallImgName]">
+            <div v-if="showCode" class="picContainer">
+                <img v-if="!dragStart" :src="[imgSource+''+sourceImgName]">
+                <img v-if="dragStart" :src="[imgSource+''+bigImgName]">
+                <img :src="[imgSource+''+smallImgName]">
+                <div class="codeTip" v-if="slideTip">
+                    <span>滑动成功，用时{{slideTime}}s</span>
                 </div>
-                <div ref="slideCon" class="slideContainer">
-                    <div ref="slideHan" class="slideHandle" :style="[`left:${location_x+start}px`]"></div>
-                </div>
+            </div>
+            <div v-if="showCode" ref="slideCon" class="slideContainer">
+                <img src="img/index/slideBlock.png" ref="slideHan" class="slideHandle" :style="[`left:${location_x+start}px`]">
+                <div class="slideOver"></div>
+                <p class="slidIcon">
+                    <img src="img/index/close.png" @click="closeCode">
+                    <img src="img/index/refresh.png" @click="picCodeRequest">
+                </p>
             </div>
 
         </div>
