--- a/src/main/webapp/log.html
+++ b/src/main/webapp/log.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div id="app">
+    <div id="app" @mouseMove.prevent="dragMove" @mouseUp.prevent="dragUp">
         <div :class="['top']" v-cloak>
             <div :class="['topTitle']">
                 {{productName}}
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div v-if="showCode&&!slideSuccess" ref="slideCon" class="slideContainer">
-                <img src="img/index/slideBlock.png" ref="slideHan" class="slideHandle" :style="[`left:${location_x+dragLeft}px`]" @mouseDown.prevent="dragDown" @mouseMove.prevent="dragMove" @mouseUp.prevent="dragUp">
+                <img src="img/index/slideBlock.png" ref="slideHan" class="slideHandle" @mouseDown.prevent="dragDown">
                 <div class="slideOver"></div>
                 <p class="slidIcon">
                     <img src="img/index/close.png" @click="closeCode">
