--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,165 +7,122 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 
 <body>
+    <script src="js/header.js"></script>
     <div id="app">
-        <div class="topContainer">
-            <!-- 导航栏 -->
-            <nav class="nav">
-                <div class="navContainer">
-                    <ul class="leftNav">
-                        <li class="localIn"><a href="index.html">首页</a></li>
-                        <li><a href="#">租赁</a></li>
-                        <li><a href="#">赠送</a></li>
+        <!-- 横幅 -->
+        <div class="topBanner">
+            <div class="menuwrap">
+                <div class="allClassify">
+                    <span @click="showDetailed">所有分类</span>
+                    <ul v-if="!showDetialedClassify">
+                        <li v-for="classify in wholeClassify">
+                            <img :src='[classify.parentPicture]'>
+                            <span>{{classify.parnentName}}</span>
+                        </li>
                     </ul>
-                    <ul class="rightNav">
-                        <li class="schoolChoose">广东金融学院</li>
-                        <li class="localIn">买家</li>
-                        <li>卖家</li>
-                        <li>登录</li>
-                    </ul>
-            </nav>
-            </nav>
-            <!-- 顶部操作 -->
-            <div class="topHandle">
-                <div class="topLogo">
-                    <img src="img/index/antsLogo.png" alt="蚂蚁置物">
-                    <span v-cloak>{{projectName}}</span>
-                </div>
-                <div class="searchGoods">
-                    <input type="text" v-model="searchWord">
-                    <img src="img/index/search.png" @click='search'>
-                </div>
-
-                <div class="mainHandle">
-                    <button>发布寻求</button>
-                    <button>正在寻求</button>
-                </div>
-
-            </div>
-            </div>
-            <!-- 横幅 -->
-            <div class="topBanner">
-                <div class="menuwrap">
-                    <div class="allClassify">
-                        <span @click="showDetailed">所有分类</span>
-                        <ul v-if="!showDetialedClassify">
-                            <li v-for="classify in wholeClassify">
-                                <img :src='[classify.parentPicture]'>
-                                <span>{{classify.parnentName}}</span>
-                            </li>
-                        </ul>
-                        <div class="detailedContent" v-if="showDetialedClassify">
-                            <div v-for="(classify,index) in wholeClassify">
-                                <h4>{{classify.goodsName}}</h4>
-                                <a href="" v-for="detailed in detailedClassify[index]">{{detailed}}</a>
-                            </div>
+                    <div class="detailedContent" v-if="showDetialedClassify">
+                        <div v-for="(classify,index) in wholeClassify">
+                            <h4>{{classify.goodsName}}</h4>
+                            <a href="" v-for="detailed in detailedClassify[index]">{{detailed}}</a>
                         </div>
                     </div>
-                    <div class="otherClassify">
-                        <span>其他</span>
-                    </div>
                 </div>
-                <!-- 轮播图 -->
-                <div class="imgPlayBox">
-                    <div class="imgContainer">
-                        <img src="img/index/playImg1.png" alt="">
-                    </div>
-                    <div class="playHandle">
-
-                    </div>
+                <div class="otherClassify">
+                    <span>其他</span>
                 </div>
             </div>
-
-
-            <!-- 主要部分 -->
-            <main>
-                <!-- 公告 -->
-                <div class="announce">
-                    <img src="img/index/tongzhi.png">
-                    <p>
-                        <strong>公告</strong>
-                        <a :href="[`announce.html?id=${announcement.annId}`]" class="announceContent">{{announcement.annTitle}}</a>
-                        <span class="announceTime">{{announcement.annTime}}</span>
-                    </p>
-                    <a href="#" class="moreAnnounce">更多</a>
+            <!-- 轮播图 -->
+            <div class="imgPlayBox">
+                <div class="imgContainer">
+                    <img src="img/index/playImg1.png" alt="">
                 </div>
-
-
-                <div class="perfectGoods">
-                    <h2 class="perfectTitle">猜你喜欢</h2>
-
-                    <span class="leftHandle" @click="turnLeft('perfect')"><</span>
-                    <div class="goodsList">
-                        <div :class="['concreteContent',moveFlag.perfect?'moveL':'moveR']" v-for="content in perfectGoods">
-                            <a href="#">
-                                <img :src="[content.goodsPicture]">
-                            </a>
-                            <p v-cloak>{{content.goodsName}}</p>
-                            <p v-cloak>￥{{content.goodsPrice}}元</p>
-                        </div>
-                    </div>
-                    <span class="rightHandle" @click="turnRight('perfect')">></span>
+                <div class="playHandle">
 
                 </div>
-
-                <div class="middleBanner">
-
-                </div>
-
-                <div class="specialGoods">
-                    <div class="specialTitle">
-                        <div :class="[showHot?'show':'']" @click="changeShow('hot')">
-                            <span :class="[showHot?'':'hide']">Hot</span>
-                            <span>最热闲置</span>
-                        </div>
-                        <div :class="[!showHot?'show':'']" @click="changeShow('new')">
-                            <span :class="[!showHot?'':'hide']">New</span>
-                            <span>最新闲置</span>
-                        </div>
-                        <em :class="[showHot?'borderHot':'borderNew']"></em>
-                        <a class="more" href="#">更多></a>
-                    </div>
-                    <span class="leftHandle" @click="turnLeft('special')"><</span>
-                    <div class="goodsList">
-                        <div :class="['concreteContent',moveFlag.hot?'moveL':'moveR']" v-if="showHot" v-for="content in hotGoods">
-                            <a href="#">
-                                <img :src="[content.goodsPicture]">
-                            </a>
-                            <p v-cloak>{{content.goodsName}}</p>
-                            <p v-cloak class="specialPrice">{{content.goodsPrice}}</p>
-                            <p v-cloak>收藏人数：{{content.starNum}}人</p>
-                        </div>
-                        <div :class="['concreteContent',moveFlag.new?'moveL':'moveR']" v-if="!showHot" v-for="content in newGoods">
-                            <a href="#">
-                                <img :src="[content.goodsPicture]">
-                            </a>
-                            <p v-cloak>{{content.goodsName}}</p>
-                            <p v-cloak class="specialPrice">￥{{content.goodsPrice}}元</p>
-                            <p v-cloak>上传时间：{{content.uploadTime}}</p>
-                        </div>
-                    </div>
-                    <span class="rightHandle" @click="turnRight('special')">></span>
-                </div>
-
-            </main>
-            <footer>
-                <div class="footIcon">
-                    <img src="img/index/foot_icon1.png">
-                    <img src="img/index/foot_icon2.png">
-                    <img src="img/index/foot_icon3.png">
-                </div>
-                <p>蚂蚁置物校园二手交易平台联系方式：12312312345</p>
-            </footer>
-
-
-
-
+            </div>
         </div>
-        <script src="js/vue.js"></script>
-        <script src="js/index.js"></script>
+
+
+        <!-- 主要部分 -->
+        <main>
+            <!-- 公告 -->
+            <div class="announce">
+                <img src="img/index/tongzhi.png">
+                <p>
+                    <strong>公告</strong>
+                    <a :href="[`announce.html?id=${announcement.annId}`]" class="announceContent">{{announcement.annTitle}}</a>
+                    <span class="announceTime">{{announcement.annTime}}</span>
+                </p>
+                <a href="#" class="moreAnnounce">更多</a>
+            </div>
+
+
+            <div class="perfectGoods">
+                <h2 class="perfectTitle">猜你喜欢</h2>
+
+                <span class="leftHandle" @click="turnLeft('perfect')"><</span>
+                <div class="goodsList">
+                    <div :class="['concreteContent',moveFlag.perfect?'moveL':'moveR']" v-for="content in perfectGoods">
+                        <a href="#">
+                            <img :src="[content.goodsPicture]">
+                        </a>
+                        <p v-cloak>{{content.goodsName}}</p>
+                        <p v-cloak>￥{{content.goodsPrice}}元</p>
+                    </div>
+                </div>
+                <span class="rightHandle" @click="turnRight('perfect')">></span>
+
+            </div>
+
+            <div class="middleBanner">
+
+            </div>
+
+            <div class="specialGoods">
+                <div class="specialTitle">
+                    <div :class="[showHot?'show':'']" @click="changeShow('hot')">
+                        <span :class="[showHot?'':'hide']">Hot</span>
+                        <span>最热闲置</span>
+                    </div>
+                    <div :class="[!showHot?'show':'']" @click="changeShow('new')">
+                        <span :class="[!showHot?'':'hide']">New</span>
+                        <span>最新闲置</span>
+                    </div>
+                    <em :class="[showHot?'borderHot':'borderNew']"></em>
+                    <a class="more" href="#">更多></a>
+                </div>
+                <span class="leftHandle" @click="turnLeft('special')"><</span>
+                <div class="goodsList">
+                    <div :class="['concreteContent',moveFlag.hot?'moveL':'moveR']" v-if="showHot" v-for="content in hotGoods">
+                        <a href="#">
+                            <img :src="[content.goodsPicture]">
+                        </a>
+                        <p v-cloak>{{content.goodsName}}</p>
+                        <p v-cloak class="specialPrice">{{content.goodsPrice}}</p>
+                        <p v-cloak>收藏人数：{{content.starNum}}人</p>
+                    </div>
+                    <div :class="['concreteContent',moveFlag.new?'moveL':'moveR']" v-if="!showHot" v-for="content in newGoods">
+                        <a href="#">
+                            <img :src="[content.goodsPicture]">
+                        </a>
+                        <p v-cloak>{{content.goodsName}}</p>
+                        <p v-cloak class="specialPrice">￥{{content.goodsPrice}}元</p>
+                        <p v-cloak>上传时间：{{content.uploadTime}}</p>
+                    </div>
+                </div>
+                <span class="rightHandle" @click="turnRight('special')">></span>
+            </div>
+
+        </main>
+    </div>
+    <script src="js/footer.js"></script>
+    <script src="js/vue.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
